@@ -118,7 +118,6 @@
                 <version>3.5.3</version>
             </plugin>
 
-            <!-- ✅ Compiler Plugin with --add-exports for Java modules -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
